--- a/wa.user.styl
+++ b/wa.user.styl
@@ -6,7 +6,7 @@
 @supportURL   https://github.com/vednoc/dark-whatsapp/issues
 @updateURL    https://userstyles.world/api/style/4.user.css
 @author       vednoc <vednoc@pm.me> (https://github.com/vednoc)
-@version      3.6.1
+@version      3.7.0
 @license      MIT
 @preprocessor stylus
 
@@ -353,17 +353,17 @@ OM = _omsg
 }
 
 @-moz-document domain('web.whatsapp.com') {
-    $top  = "Hi there! Since I quit WA a while ago, and also been busy working "
-    $top += "on a rewrite for UserStyles.world (as a replacement for USo), I am"
-    $top += " looking for someone to help maintainin DWA."
-    $top += "\A\ALink to USw: https://userstyles.world 👀 \A\A"
-    $top += "More about v3.6.1 update, as always, in the changelog:"
+    $top  = "Still looking for someone to help maintain DWA. Also, I have been "
+    $top += "working on a new website to browse and share userstyles. "
+    $top += "Consider giving it a try:\A\A"
+    $top += "🌟 https://userstyles.world 🌟"
+    $top += "\A\AMore info, as always, is in the project changelog:"
     $btm  = "\A https://github.com/vednoc/dark-whatsapp\A\A\A"
     $btm += "P.S. CSS can not add links, only fake/pseudo text."
 
     :root:not(#z), .dark:not(#z) {
         /// Userstyle info and announcements.
-        --version: '🌚 Dark-WhatsApp v3.6.1 — March 3rd, 2021'
+        --version: '🌚 Dark-WhatsApp v3.7.0 — July 9th, 2021'
         --message: $top
         --changes: $btm
 
