--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1387,15 +1387,14 @@ OM = _omsg
         /// Odd header-like tall background.
         &::after { content: unset i }
 
-        /// Search.
-        /._3yWey {
+        /// Global -> Search bar.
+        /[data-testid="chat-list-search-container"] {
             c: 0 0 bg2
             border-bottom: 1px solid bg5 i
-            label {
+            > div {
                 rad: var(--r-inputs) i
                 box-shadow: inset 0 0 0 1px bg4
             }
-            &::after { display: none i }
             &:focus-within { box-shadow: var(--bshadow) }
         }
 
