vars: remap some new color variables

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -574,6 +574,8 @@ OM = _omsg
         --chat-marker-admin-border-rgb: var(--ac-0-rgb) //0,175,156;
         --chat-marker-border: var(--fg-3) //#999999b3;
         --chat-marker-border-rgb: var(--fg-3-rgb) //153,153,153;
+        --chat-meta: var(--fg-3) //hsl(203.1, 12%, 57.6%);
+        --chat-meta-rgb: var(--fg-3-rgb) //134,150,160;
         --chatlist-icon: var(--fg-5) //#f1f1f299;
         --chatlist-icon-rgb: var(--fg-5-rgb) //241,241,242;
         --checkbox-background: var(--ac-0) //#00af9c;
@@ -802,6 +804,10 @@ OM = _omsg
         --quick-action-button-rgb: var(--fg-3-rgb) //241,241,242;
         --quick-action-button-background: var(--bg-4) //#080e1299;
         --quick-action-button-background-rgb: var(--bg-4-rgb) //8,14,18;
+        --round-entry-point-background-color: var(--bg-4) //hsla(0, 0%, 0%, 0.7);
+        --round-entry-point-background-color-rgb: var(--bg-4-rgb) //0,0,0;
+        --quoted-message-text: var(--fg-2) //hsla(0,0%,100%,0.6);
+        --quoted-message-text-rgb: var(--fg-2-rgb) //255,255,255;
         --rich-text-panel-background: var(--bg-3) //#1c282f;
         --rich-text-panel-background-rgb: var(--bg-3-rgb) //28,40,47;
         --search-container-background: var(--bg-2) //#131c21;
@@ -854,6 +860,8 @@ OM = _omsg
         --teal-hover-rgb: var(--ac-0-rgb) //0,183,161;
         --teal-pale: var(--ac-3) //#5fc8bc;
         --teal-pale-rgb: var(--ac-3-rgb) //95,200,188;
+        --text-muted: var(--fg-4) //hsl(203.1, 12%, 57.6%);
+        --text-muted-rgb: var(--fg-4-rgb) //134,150,160;
         --thumb-border-active: var(--bg-2) //#75787a;
         --thumb-border-active-rgb: var(--bg-2-rgb) //117,120,122;
         --thumb-border-active-new-media-editor: var(--fg-4) //#f1f1f2;
@@ -872,6 +880,8 @@ OM = _omsg
         --unread-background-rgb: var(--bg-3-rgb) //28,40,47;
         --unread-bar-background: to_rgba('bg-0', 0.7) //#080e124d;
         --unread-bar-background-rgb: var(--bg-0-rgb) //8,14,18;
+        --unread-timestamp: var(--ac-0) //hsl(167.1, 100%, 32.9%);
+        --unread-timestamp-rgb: var(--ac-0-rgb) //0,168,132;
         --unread-marker-background: var(--ac-0) //#00af9c;
         --unread-marker-background-rgb: var(--ac-0-rgb) //0,175,156;
         --unread-marker-text: var(--white) //#101d24;
@@ -898,6 +908,20 @@ OM = _omsg
         --wallpaper-thumb-border-hover-rgb: var(--bg-4-rgb) //59,63.52941,66;
         --win32-title-primary: var(--fg-1) //#fff;
         --win32-title-primary-rgb: var(--fg-1-rgb) //255,255,255;
+        --reactions-tray-background: var(--bg-3) //hsl(202.1, 21.8%, 17.1%);
+        --reactions-tray-background-rgb: var(--bg-3-rgb) //34,46,53;
+        --reactions-tray-active-round-background: var(--bg-5) //hsl(204, 17.5%, 28%);
+        --reactions-tray-active-round-background-rgb: var(--bg-5-rgb) //59,74,84;
+        --reactions-picker-bg: var(--bg-4) //hsl(202.2, 11.7%, 45.3%);
+        --reactions-picker-bg-rgb: var(--bg-4-rgb) //102,119,129;
+        --svg-gray-button: var(--fg-3) //hsl(204, 22.7%, 17.3%);
+        --svg-gray-button-rgb: var(--fg-3-rgb) //34,46,54;
+        --text-primary-strong: var(--fg-1) //hsl(200, 15.8%, 92.5%);
+        --text-primary-strong-rgb: var(--fg-1-rgb) //233,237,239;
+        --text-secondary-lighter: var(--fg-2) //hsl(203.1, 12%, 57.6%);
+        --text-secondary-lighter-rgb: var(--fg-2-rgb) //134,150,160;
+        --text-medium-emphasis: var(--fg-3) //hsl(203.1, 12%, 57.6%);
+        --text-medium-emphasis-rgb: var(--fg-3-rgb) //134,150,160;
 
         /// Generate DWA color variables.
         for _v in (bg fg ac b1 b2 b3 b4 b5 b6 b7 b8) {
