--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1009,14 +1009,11 @@ msg += "P.S. CSS can not create clickable links."
             button:nth-child(3) { c: fg4 }
         }
 
-        /// Intro image.
-        [data-asset-intro-image-dark],
-        [data-asset-intro-image-light] {
-            max-width: 240px
-            max-height: 240px
+        /// Intro -> Image.
+        [data-testid^="intro-md-beta-logo-"] {
+            padding: 8rem
             background-image: var(--intro-image)
-            transition: opacity 0.6s ease
-            rad: 0 i
+            > svg { display: none }
         }
 
         /// Intro -> Version.
